--- a/Tareas/Data Real/Data_Real_TAREA.ipynb
+++ b/Tareas/Data Real/Data_Real_TAREA.ipynb
@@ -2,18 +2,167 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f22ddd53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1997-05-15</td>\n",
+       "      <td>0.097917</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.096354</td>\n",
+       "      <td>0.121875</td>\n",
+       "      <td>1443120000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1997-05-16</td>\n",
+       "      <td>0.086458</td>\n",
+       "      <td>0.098958</td>\n",
+       "      <td>0.085417</td>\n",
+       "      <td>0.098438</td>\n",
+       "      <td>294000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1997-05-19</td>\n",
+       "      <td>0.085417</td>\n",
+       "      <td>0.088542</td>\n",
+       "      <td>0.081250</td>\n",
+       "      <td>0.088021</td>\n",
+       "      <td>122136000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1997-05-20</td>\n",
+       "      <td>0.081771</td>\n",
+       "      <td>0.087500</td>\n",
+       "      <td>0.081771</td>\n",
+       "      <td>0.086458</td>\n",
+       "      <td>109344000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1997-05-21</td>\n",
+       "      <td>0.071354</td>\n",
+       "      <td>0.082292</td>\n",
+       "      <td>0.068750</td>\n",
+       "      <td>0.081771</td>\n",
+       "      <td>377064000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date     Close      High       Low      Open      Volume\n",
+       "0  1997-05-15  0.097917  0.125000  0.096354  0.121875  1443120000\n",
+       "1  1997-05-16  0.086458  0.098958  0.085417  0.098438   294000000\n",
+       "2  1997-05-19  0.085417  0.088542  0.081250  0.088021   122136000\n",
+       "3  1997-05-20  0.081771  0.087500  0.081771  0.086458   109344000\n",
+       "4  1997-05-21  0.071354  0.082292  0.068750  0.081771   377064000"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar el archivo\n",
+    "df_amazon = pd.read_csv('Amazon_stock_data.csv')\n",
+    "\n",
+    "# Ver las primeras filas\n",
+    "df_amazon.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "af34291a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "# Seleccionar variables predictoras y la respuesta\n",
+    "X = df_amazon[['Open', 'High', 'Low', 'Volume']]\n",
+    "y = df_amazon['Close']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fd28f241",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'statsmodels'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mstatsmodels\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mapi\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msm\u001b[39;00m\n\u001b[32m      3\u001b[39m X_const = sm.add_constant(X)  \u001b[38;5;66;03m# Añadir constante para el término independiente\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'statsmodels'"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "X_const = sm.add_constant(X)  # Añadir constante para el término independiente"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
