--- a/Tareas/Data Real/Data_Real_TAREA.ipynb
+++ b/Tareas/Data Real/Data_Real_TAREA.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "id": "f89bf186",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f22ddd53",
    "metadata": {},
    "outputs": [
@@ -100,8 +111,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# Cargar el archivo\n",
     "df_amazon = pd.read_csv('Amazon_stock_data.csv')\n",
     "\n",
@@ -123,26 +132,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "fd28f241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_const = sm.add_constant(X)  # Añadir constante para el término independiente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3f65ed52",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'statsmodels'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mstatsmodels\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mapi\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msm\u001b[39;00m\n\u001b[32m      3\u001b[39m X_const = sm.add_constant(X)  \u001b[38;5;66;03m# Añadir constante para el término independiente\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'statsmodels'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  Close   R-squared:                       1.000\n",
+      "Model:                            OLS   Adj. R-squared:                  1.000\n",
+      "Method:                 Least Squares   F-statistic:                 2.471e+07\n",
+      "Date:                Tue, 24 Jun 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        15:21:37   Log-Likelihood:                -5245.9\n",
+      "No. Observations:                7067   AIC:                         1.050e+04\n",
+      "Df Residuals:                    7062   BIC:                         1.054e+04\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          0.0033      0.011      0.311      0.755      -0.018       0.024\n",
+      "Open          -0.6151      0.009    -69.247      0.000      -0.633      -0.598\n",
+      "High           0.8166      0.008    104.310      0.000       0.801       0.832\n",
+      "Low            0.7989      0.008    102.596      0.000       0.784       0.814\n",
+      "Volume     -3.156e-12   4.69e-11     -0.067      0.946   -9.51e-11    8.88e-11\n",
+      "==============================================================================\n",
+      "Omnibus:                     1693.931   Durbin-Watson:                   2.135\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            82991.582\n",
+      "Skew:                           0.277   Prob(JB):                         0.00\n",
+      "Kurtosis:                      19.779   Cond. No.                     3.46e+08\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 3.46e+08. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
      ]
     }
    ],
    "source": [
-    "import statsmodels.api as sm\n",
+    "modelo = sm.OLS(y, X_const).fit()\n",
+    "print(modelo.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e63b2451",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variables seleccionadas: ['High', 'Low']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.feature_selection import SequentialFeatureSelector\n",
     "\n",
-    "X_const = sm.add_constant(X)  # Añadir constante para el término independiente"
+    "selector = SequentialFeatureSelector(LinearRegression(), direction='forward')\n",
+    "selector.fit(X, y)\n",
+    "\n",
+    "# Mostrar variables seleccionadas\n",
+    "features_selected = X.columns[selector.get_support()]\n",
+    "print(\"Variables seleccionadas:\", list(features_selected))\n"
    ]
   }
  ],
